docs/book/samples/appa/marker_args_check.kso
type null

pub play =
  bad = null true
  print "{bad}"
